--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p class="mb-5">A bus ride is like being in another world.</p>
                     <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
-                    <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p>
+                    <!-- <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p> -->
                 </div>
             </div>
         </div>
