--- a/Form.html
+++ b/Form.html
@@ -16,7 +16,7 @@
     </div> -->
 
     <div class="site-blocks-cover"
-        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px;"
+        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 764px; width: 1519px"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row justify-align-center align-items-center">
