--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
             </div>
             <div class="container ">
                 <div class="row">
-                    <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                    <div class="col-lg-1"></div>
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0">
                         <a href="#" class="unit-1 text-center">
                             <img src="images/img1.jpg" alt="Image" class="img-fluid" style="height: 353px">
                             <div class="unit-1-text">
@@ -183,7 +184,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-6 mb-6 mb-lg-0">
+                    <div class="col-md-6 col-lg-5 mb-6 mb-lg-0">
                         <a href="#" class="unit-1 text-center">
                             <img src="images/img2.jpeg" alt="Image" class="img-fluid" style="height: 353px">
                             <div class="unit-1-text">
@@ -191,6 +192,7 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </div>
