--- a/about.html
+++ b/about.html
@@ -151,6 +151,10 @@
 
   </div>
 
+
+  <img class="ml-1 bus" data-aos="fade-right" src="images/travel.png" style="max-width: 150px;">
+
+
   <!-- Footer -->
   <footer class="page-footer font-small stylish-color-dark pt-4">
 
