--- a/Form.html
+++ b/Form.html
@@ -18,6 +18,9 @@
     <div class="site-blocks-cover"
         style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 764px; width: 1519px"
         data-aos="fade" data-stellar-background-ratio="0.5">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+                style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
+
         <div class="container">
             <div class="row justify-align-center align-items-center">
                 <div class="col-md-12">
