--- a/bus_details.html
+++ b/bus_details.html
@@ -82,7 +82,7 @@
 
 
 
-  <div class="site-section" data-aos="fade-up" style="margin-top: 30px;">
+  <div id="delhi" class="site-section" data-aos="fade-up" style="margin-top: 30px; padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0">
@@ -120,7 +120,7 @@
     </div>
   </div>
 
-  <div class="site-section" data-aos="fade-up">
+  <div id="agra" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0">
@@ -158,7 +158,7 @@
     </div>
   </div>
 
-  <div class="site-section" data-aos="fade-up">
+  <div id="mathura" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mt-5 mb-md-0">
@@ -196,7 +196,7 @@
     </div>
   </div>
 
-  <div class="site-section" data-aos="fade-up">
+  <div id="vrindavan" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0">
@@ -234,7 +234,7 @@
     </div>
   </div>
 
-  <div class="site-section" data-aos="fade-up">
+  <div id="barsana" class="site-section" data-aos="fade-up" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0">
@@ -272,7 +272,7 @@
     </div>
   </div>
 
-  <div class="site-section" data-aos="fade-up" style="margin-bottom: 30px;">
+  <div id="chaumuhan" class="site-section" data-aos="fade-up" style="margin-bottom: 30px;" style="padding-top: 130px;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 mb-5 mb-md-0 ">
@@ -358,22 +358,22 @@
 
           <ul class="list-unstyled">
             <li>
-              <a href="bus_details.html"> Delhi</a>
+              <a href="bus_details.html#delhi"> Delhi</a>
             </li>
             <li>
-              <a href="bus_details.html"> Agra</a>
+              <a href="bus_details.html#agra"> Agra</a>
             </li>
             <li>
-              <a href="bus_details.html"> Mathura</a>
+              <a href="bus_details.html#mathura"> Mathura</a>
             </li>
             <li>
-              <a href="bus_details.html"> Vrindavan</a>
+              <a href="bus_details.html#vrindavan"> Vrindavan</a>
             </li>
             <li>
-              <a href="bus_details.html"> Barsana</a>
+              <a href="bus_details.html#barsana"> Barsana</a>
             </li>
             <li>
-              <a href="bus_details.html">Chaumuhan</a>
+              <a href="bus_details.html#chaumuhan">Chaumuhan</a>
             </li>
           </ul>
         </div>
