--- a/Form.html
+++ b/Form.html
@@ -23,7 +23,7 @@
 
         <div class="container">
             <div class="row justify-align-center align-items-center">
-                <div class="col-md-12">
+                <div class="col-lg-12 col-md-6 ">
                     <div class="header">
                         <h2>MANAGE PASS</h2>
                     </div>
@@ -79,9 +79,6 @@
                             <button type="submit" onclick="createPDF()">Submit</button>
                         </div>
                     </form>
-
-
-
                 </div>
             </div>
         </div>
