--- a/about.html
+++ b/about.html
@@ -84,8 +84,7 @@
 
     </header> -->
 
-    <div class="site-blocks-cover inner-page-cover"
-      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px;"
+    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/bgimg.jpeg); height: 760px;"
       data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container content">
         <div class="row align-items-center justify-content-center text-center">
