--- a/Form.html
+++ b/Form.html
@@ -15,8 +15,7 @@
         style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px;">
     </div> -->
 
-    <div class="site-blocks-cover"
-        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 764px; width: 1519px"
+    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 764px; width: 1519px"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
                 style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
@@ -53,8 +52,13 @@
                         </div>
 
                         <div class="form-control">
-                            <label for="expdate">Valid Till</label>
-                            <input type="date" id="expdate">
+                            <label for="expdate">Valid Till (month)</label>
+                            <select type="checkbox" id="expdate"
+                                style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
                             <small>Error msg</small>
@@ -66,6 +70,7 @@
                                 style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
                                 <option value="Choose Your Destination">Choose Your Destination</option>
                                 <option value="Delhi">Delhi</option>
+                                <option value="Agra">Agra</option>
                                 <option value="Mathura">Mathura</option>
                                 <option value="Vrindavan">Vrindavan</option>
                                 <option value="Barsana">Barsana</option>
@@ -76,7 +81,8 @@
                             <small>Error msg</small>
                         </div>
                         <div class="button">
-                            <button type="submit" onclick="createPDF()">Submit</button>
+                            <button type="submit"><a href="Payment.html"
+                                    style="color: white; text-decoration: none;">Proceed</a></button>
                         </div>
                     </form>
                 </div>
