--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover"
-        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px;"
-        data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover" style="background-image: url(images/bgimg.jpeg); height: 730px;" data-aos="fade"
+        data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center main">
 
