--- a/Form.html
+++ b/Form.html
@@ -7,8 +7,8 @@
     <title>Manage Pass</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/Form.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="css/bus.css"> -->
 </head>
 
@@ -52,19 +52,6 @@
                             <i class="fa fa-exclamation-circle"></i>
                             <small>Error msg</small>
                         </div>
-
-                        <div class="form-control">
-                            <label for="expdate">Valid Till (month)</label>
-                            <select type="checkbox" id="expdate"
-                                style="display: block; width: 100%; padding: 10px; border-radius: 5px; outline: none; border: 2px solid #f0f0f0;">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            <small>Error msg</small>
-                        </div> -->
 
                         <div class="form-control">
                             <label for="expdate">Valid till(Months)</label>
