--- a/Form.html
+++ b/Form.html
@@ -83,8 +83,8 @@
                             <small>Error msg</small>
                         </div>
                         <div class="button">
-                            <button type="submit"><a href="Payment.html"
-                                    style="color: white; text-decoration: none;">Proceed</a></button>
+                            <button type="submit" id="submit" onclick="Proceed()"
+                                style="color: white; text-decoration: none;">Proceed</button>
                         </div>
                     </form>
                 </div>
