--- a/Payment.html
+++ b/Payment.html
@@ -69,10 +69,10 @@
                             <small>Error msg</small>
                         </div>
                         <div class="button">
-                            <button type="submit"><a href="Form.html"
-                                    style="color: white; text-decoration: none;">Previous</a></button>
-                            <button type="submit"><a href="Form.html"
-                                    style="color: white; text-decoration: none;">Submit</a></button>
+                            <button type="submit" onclick="location.href='Form.html'"
+                                style="color: white; text-decoration: none;">Previous</button>
+                            <button type="submit" onclick="location.href='PrintPass.html'"
+                                style="color: white; text-decoration: none;">Submit</button>
                         </div>
                     </form>
                 </div>
