--- a/Payment.html
+++ b/Payment.html
@@ -71,7 +71,7 @@
                         <div class="button">
                             <button type="submit" onclick="location.href='Form.html'"
                                 style="color: white; text-decoration: none;">Previous</button>
-                            <button type="submit" onclick="location.href='PrintPass.html'"
+                            <button type="submit" onclick="Proceed()"
                                 style="color: white; text-decoration: none;">Submit</button>
                         </div>
                     </form>
