--- a/PrintPass.html
+++ b/PrintPass.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <table id="receipt">
+        <table id="table">
             <th colspan="2">Pass Receipt</th>
             <tr>
                 <td>Name</td>
@@ -42,14 +42,23 @@
         </table>
 
         <div class="button">
-            <button type="submit" onclick="pdf()" style=" margin-top: 50px;">Print
+            <button type="submit" id="pdf" style=" margin-top: 50px;">Print
                 Receipt</button>
         </div>
 
     </div>
 
+    <!-- <script src="jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/index.d.ts"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.1/jspdf.plugin.autotable.min.js"></script>
+
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="js/PrintPass.js"></script>
 </body>
 
